# pyllars

./: .gitignore  .project  CMakeLists.txt  CMakeLists.txt.in  README.md  main.py  newProject.xpr  setup.py
.circleci/: config.yml
Pyllars/: Pyllars.cbp  Pyllars.depend  Pyllars.layout
examples/: compile.sh  notes  notes~  template.cpp  templatesxslt.cpp  v8.h  v8.xml  v8py.cpp
pyllars/: pyllars_callbacks.h  pyllars_callbacks.hpp  pyllars_classmethodsemantics.h  pyllars_classmethodsemantics.hpp  pyllars_classwrapper.h  pyllars_classwrapper.hpp  pyllars_constmethodcallsemantics.h  pyllars_constmethodcallsemantics.hpp  pyllars_conversions.h  pyllars_conversions.hpp  pyllars_defns.h  pyllars_defns.hpp  pyllars_function_wrapper.h  pyllars_function_wrapper.hpp  pyllars_globalmembersemantics.hpp  pyllars_methodcallsemantics.h  pyllars_methodcallsemantics.hpp  pyllars_object_lifecycle.hpp  pyllars_pointer.h  pyllars_pointer.hpp  pyllars_pointer.h~  pyllars_utils.h  pyllars_utils.hpp  tmp.h
pyllars/generation/: parser.py  processor.py
pyllars/pyllars/: do_gen.sh  pyllars.cpp  pyllars.hpp  pyllars_callbacks.hpp  pyllars_classmethodsemantics.cpp  pyllars_classmethodsemantics.hpp  pyllars_classwrapper.cpp  pyllars_classwrapper.hpp  pyllars_classwrapper.impl  pyllars_constmethodcallsemantics.cpp  pyllars_constmethodcallsemantics.hpp  pyllars_conversions.cpp  pyllars_conversions.hpp  pyllars_defns.cpp  pyllars_defns.hpp  pyllars_function_wrapper.hpp  pyllars_globalmembersemantics.cpp  pyllars_globalmembersemantics.hpp  pyllars_methodcallsemantics.cpp  pyllars_methodcallsemantics.hpp  pyllars_object_lifecycle.cpp  pyllars_object_lifecycle.hpp  pyllars_pointer.cpp  pyllars_pointer.hpp  pyllars_templates.cpp  pyllars_templates.hpp  pyllars_utils.hpp  pyllars_varargs.cpp  pyllars_varargs.hpp
pyllars/pyllars/generation/: parser.py  processor.py
pyllars/pyllars/generation/elements/: __init__.py  templates.py
pyllars/pyllars/xslt/: cpp2pyllars.xslt
pyllars/test/: compile.sh  do_setup.sh  setup_basic_C.py  setup_sysmodules.py  test_basics.cpp  testmod.cpp
pyllars/test/scripts/: testbasicC.py
pyllars/test/to_convert/: testbasic_C.cpp  testbasic_C.hpp
pyllars/xslt/: cpp2py.xslt  cpp2pyllars.xslt  cpp2python.xslt  cpp2pythonnative.xsl
src/: MANIFEST  setup.py
src/cpp/: CMakeLists.txt
src/cpp/pyllars/: pyllars.cpp  pyllars_class.cpp  pyllars_const.cpp  pyllars_floating_point.cpp  pyllars_floating_point_ptrs.cpp  pyllars_integer.cpp  pyllars_integer.impl.hpp  pyllars_integer_const.cpp  pyllars_integer_constvolatile.cpp  pyllars_integer_nonconst.cpp  pyllars_integer_nonconstvolatile.cpp  pyllars_integer_ptrs.cpp  pyllars_integer_ptrs_const.cpp  pyllars_integer_ptrs_const_volatile.cpp  pyllars_integer_ptrs_volatile.cpp  pyllars_integer_refs.cpp  pyllars_integer_refs_const.cpp  pyllars_integer_refs_const_volatile.cpp  pyllars_integer_refs_volatile.cpp  pyllars_integer_types.cpp  pyllars_templates.cpp
src/pyllars/: pyllars-generate
src/pyllars/cppparser/: elements.py  function_lexer.py  lexer.py  parser.py  type_lexer.py
src/pyllars/cppparser/compilation/: __init__.py
src/resources/: CMakeLists.txt
src/resources/pyllars/: CMakeLists.txt  pyllars.cpp  pyllars.hpp  pyllars_callbacks.cpp  pyllars_callbacks.hpp  pyllars_callbacks.impl  pyllars_classmembersemantics.cpp  pyllars_classmembersemantics.hpp  pyllars_classmembersemantics.impl  pyllars_classmembersemantics.impl.hpp  pyllars_classmethodsemantics.cpp  pyllars_classmethodsemantics.hpp  pyllars_classmethodsemantics.impl  pyllars_classmethodsemantics.impl.hpp  pyllars_classwrapper.cpp  pyllars_classwrapper.hpp  pyllars_classwrapper.impl  pyllars_classwrapper.impl.hpp  pyllars_const.cpp  pyllars_const.hpp  pyllars_constmethodcallsemantics.cpp  pyllars_constmethodcallsemantics.hpp  pyllars_containment.hpp  pyllars_conversions.cpp  pyllars_conversions.hpp  pyllars_conversions.impl  pyllars_conversions.impl.hpp  pyllars_defns.cpp  pyllars_defns.hpp  pyllars_defns.impl  pyllars_defns.impl.hpp  pyllars_function_wrapper.hpp  pyllars_globalmembersemantics.cpp  pyllars_globalmembersemantics.hpp  pyllars_globalmembersemantics.impl  pyllars_globalmembersemantics.impl.hpp  pyllars_membersemantics.hpp  pyllars_membersemantics.impl  pyllars_membersemantics.impl.hpp  pyllars_methodcallsemantics.cpp  (+19 more)
test/: #test_basics.cpp#  CMakeLists.txt  conftest.py  output  setup_basic_C.py  setup_sysmodules.py  test_asl_lexer.py  test_basics.cpp  test_basics.cpp~  test_basics.py  test_code_generation.py
test/cpp/: CMakeLists.txt  anon_enum_defns.h  class_test_defns.h  function_defns.hpp  globals.cpp  globals.h  setup.h  setup_anon_enums-Enum.cpp  setup_anon_enums.cpp  setup_anon_enums.hpp  setup_basic_class-builder.cpp  setup_basic_class.cpp  setup_basic_class.h  setup_basic_class_BasicClass.cpp  setup_basic_class_BasicClass2.cpp  setup_bitfields.cpp  setup_bitfields.h  setup_functions.cpp  setup_functions.hpp  setup_globals.cpp  setup_globals.h  setup_inheritance_test.cpp  setup_inheritance_test.h  setup_template_class.cpp  setup_template_class.h  template_class_defns.h  test_anon_enums.cpp  test_basic_classes.cpp  test_bit_fields.cpp  test_classes_and_pointers.cpp  test_containment.cpp  test_conversions.cpp  test_functions.cpp  test_globals.cpp  test_inheritance.cpp  test_initializer.cpp  test_template_classes.cpp
test/python/: conftest.py  test_basics.py  test_clang_translator.py  test_opaque_types.py  test_type_lexer.py
test/python/resources/: anonymous.cpp  anonymous.hpp  bitfields.cpp  clang-check-output.example  classes.cpp  classes.hpp  classoperators.hpp  complexattributes.cpp  complexattributes.hpp  enums.hpp  functions.cpp  globals.hpp  inheritance.cpp  inheritance.hpp  template_classes.hpp
test/resources/: bitfields.hpp  classes.cpp  classes.hpp  functions.hpp  globals.cpp  globals.hpp  inheritance.cpp  inheritance.hpp  opaque_types.cpp  opaque_types.hpp  publicmembers.cpp  template_classes.cpp
test/to_convert/: testbasic_C.hpp
v8/: __init__.py  __init__.py~
v8/internal/: __init__.py
xslt/: cpp2python.xslt
(+148 files in other folders)
