cmake_minimum_required(VERSION 3.10)
project(pyllars)

set(GCC_COVERAGE_COMPILE_FLAGS "-fprofile-arcs -ftest-coverage --coverage -O0 -fno-inline")
set(GCC_COVERAGE_LINK_FLAGS    "--coverage -lgcov")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_CXX_STANDARD 17)
if (EXISTS "/usr/local/include/python3.7dm")
	set (PYTHON_LD "-L/usr/local/lib64 -lpython3.7dm")
    set (PYTHON_INCLUDE "/usr/local/include/python3.7dm")
else()
    set (PYTHON_LD "-lpython3.6m")
    set (PYTHON_INCLUDE "/usr/include/python3.6m")
endif()
add_subdirectory(src/cpp)
add_subdirectory(test/cpp)
